# cpu_sim

./: importCSSPreprocessor.js  index.html  manifest.json  manifest.webmanifest  package-lock.json  package.json  svelte.config.js  sw.js  test.html  vite.config.ts
_app/: version.json
_app/immutable/assets/: 0.12621085.css  0.1563aac8.css  0.34967e3b.css  0.39e484b5.css  0.522672a8.css  0.6fe30035.css  0.96e67b17.css  0.9ea600a6.css  0.b3798326.css  0.d487229c.css  0.f43da789.css  2.0bbdd600.css  2.2ac768d8.css  2.2c668826.css  2.3c587ba2.css  2.5d34e289.css  2.88bd01f8.css  2.8d398722.css  2.8e4c0a50.css  2.8f3e9f72.css  2.962f9996.css  2.b2b24b9b.css  2.e22fb31d.css  _layout.129121d5.css  _layout.12cf82df.css  _layout.1491e935.css  _layout.3c89b798.css  _layout.43bdb5d5.css  _layout.59b6d5d9.css  _layout.8a0b468c.css  _layout.938ea204.css  _layout.94a0f905.css  _layout.ad36f46d.css  _layout.fa897784.css  _page.08b2c907.css  _page.399680e5.css  _page.5c790197.css  _page.6e4127fa.css  _page.a4573dda.css  _page.aff69a01.css  (+19 more)
_app/immutable/chunks/: Toaster.1e2cb624.js  Toaster.2e411508.js  Toaster.34c19dde.js  Toaster.3c6f1057.js  Toaster.3eab06c8.js  Toaster.5dba80ed.js  Toaster.a4fbb5b5.js  index.107d6097.js  (+81 more)
cpu_sim_rs/: Cargo.toml  README.md  compile.sh  rust-analyzer.toml
cpu_sim_rs/.cargo/: config.toml
cpu_sim_rs/src/: cpu.rs  lib.rs  parser.rs  wasm.rs
src/: app.html
src/lib/: ModalWindow.svelte  ModalWindow.ts  Toaster.svelte  memory_store.ts  opacity_store.ts
src/routes/: +layout.svelte  +page.svelte  Header.svelte  styles.css
static/: manifest.json
(+156 files in other folders)
