[package]
name = "cpu_sim_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true 
strip = true

[dependencies]
js-sys = "0.3.64"
nom = "7.1.3"
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.30"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
cfg-if = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
tracing-wasm = "0.2.1"
